--- a/text/images/LETspektrumDavkEkvivalent.tex
+++ b/text/images/LETspektrumDavkEkvivalent.tex
@@ -82,26 +82,26 @@
 \begin{picture}(7936.00,5102.00)%
     \gplgaddtomacro\gplbacktext{%
       \csname LTb\endcsname%
-      \put(1210,704){\makebox(0,0)[r]{\strut{}$10$}}%
+      \put(946,704){\makebox(0,0)[r]{\strut{}$0.01$}}%
       \csname LTb\endcsname%
-      \put(1210,1737){\makebox(0,0)[r]{\strut{}$100$}}%
+      \put(946,1737){\makebox(0,0)[r]{\strut{}$0.1$}}%
       \csname LTb\endcsname%
-      \put(1210,2771){\makebox(0,0)[r]{\strut{}$1000$}}%
+      \put(946,2771){\makebox(0,0)[r]{\strut{}$1$}}%
       \csname LTb\endcsname%
-      \put(1210,3804){\makebox(0,0)[r]{\strut{}$10000$}}%
+      \put(946,3804){\makebox(0,0)[r]{\strut{}$10$}}%
       \csname LTb\endcsname%
-      \put(1210,4837){\makebox(0,0)[r]{\strut{}$100000$}}%
+      \put(946,4837){\makebox(0,0)[r]{\strut{}$100$}}%
       \csname LTb\endcsname%
-      \put(1342,484){\makebox(0,0){\strut{}$10$}}%
+      \put(1078,484){\makebox(0,0){\strut{}$10$}}%
       \csname LTb\endcsname%
-      \put(4441,484){\makebox(0,0){\strut{}$100$}}%
+      \put(4309,484){\makebox(0,0){\strut{}$100$}}%
       \csname LTb\endcsname%
       \put(7539,484){\makebox(0,0){\strut{}$1000$}}%
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
-      \put(176,2770){\rotatebox{-270}{\makebox(0,0){\strut{}$H$ [$\mu$Sv]}}}%
-      \put(4440,154){\makebox(0,0){\strut{}$\mathit{LET}$ [keV/$\mu$m]}}%
+      \put(176,2770){\rotatebox{-270}{\makebox(0,0){\strut{}$H$ [mSv]}}}%
+      \put(4308,154){\makebox(0,0){\strut{}$\mathit{LET}$ [keV/$\mu$m]}}%
       \csname LTb\endcsname%
       \put(6624,4616){\makebox(0,0)[r]{\strut{}PDP1}}%
       \csname LTb\endcsname%
