--- a/text/images/LETspektrumFluence.tex
+++ b/text/images/LETspektrumFluence.tex
@@ -98,7 +98,7 @@
     }%
     \gplgaddtomacro\gplfronttext{%
       \csname LTb\endcsname%
-      \put(176,2770){\rotatebox{-270}{\makebox(0,0){\strut{}Fluence [$\mu$m$^{-2}$sr$^{-1}$]}}}%
+      \put(176,2770){\rotatebox{-270}{\makebox(0,0){\strut{}$\Phi$ [cm$^{-2}$sr$^{-1}$]}}}%
       \put(4308,154){\makebox(0,0){\strut{}$\mathit{LET}$ [keV/$\mu$m]}}%
       \csname LTb\endcsname%
       \put(6624,4616){\makebox(0,0)[r]{\strut{}PDP1}}%
