--- a/text/main.tex
+++ b/text/main.tex
@@ -6,7 +6,7 @@
 %\includeonly{parts/experimentDosis, parts/detektory, parts/praktickaCast}
 %\includeonly{parts/praktickaCast}
 %\includeonly{parts/detektory, parts/experimentDosis}
-\includeonly{parts/detektory,parts/praktickaCast}
+%\includeonly{parts/detektory,parts/praktickaCast}
 %\includeonly{parts/detektory}
 \begin{document}
 \pagestyle{empty}
@@ -31,11 +31,8 @@
 \include{parts/praktickaCast}
 
 \include{parts/zaver}
+
+%\include{parts/appendix}
 %\nocite{*}
 \printbibliography[title=Seznam literatury]
 \end{document}
-
-
-
-
-
