--- a/text/parts/preamble.tex
+++ b/text/parts/preamble.tex
@@ -73,6 +73,8 @@
 \usepackage[unicode, pdftex, colorlinks=true, linkcolor=red,
 urlcolor=blue, citecolor=blue, pdfauthor=MichalSestak, pdftitle=DoseDistributionInsideTheISS]{hyperref}
 
+\usepackage{appendix}
+
 %\usepackage{soulpos}
 %\usepackage{lmodern}
 %\usepackage[author={Michal Šesták}]{pdfcomment}
