--- a/text/citace.bib
+++ b/text/citace.bib
@@ -382,7 +382,6 @@ keywords = "Space dosimetry "
     urldate={2017-05-13},
 }
 
-%závěr
 %ambrozova_dvaExperimenty
 @article{ambrozova_dvaExperimenty,
 title = "Cosmic radiation monitoring at low-Earth orbit by means of thermoluminescence and plastic nuclear track detectors ",
@@ -402,6 +401,33 @@ keywords = "Low Earth orbit",
 keywords = "Passive detector",
 keywords = "Thermoluminescent detector",
 keywords = "Plastic nuclear track detector "
+}
+
+@online{RAM,
+    author={NASA},
+    title={Radiation Area Monitor (RAM) - 11.22.16},
+    url={https://www.nasa.gov/mission_pages/station/research/experiments/236.html},
+    date={},
+    organization={NASA},
+    urldate={2017-06-19},
+}
+
+@online{serviceModule,
+    author={NASA},
+    title={Russian Service Module},
+    url={https://www.nasa.gov/multimedia/imagegallery/image_feature_417.html},
+    date={2015-12-15},
+    organization={NASA},
+    urldate={2017-06-19},
+}
+
+@online{piers1,
+    author={Wikipedia, The Free Encyclopedia},
+    title={Pirs (ISS module)},
+    url={https://en.wikipedia.org/wiki/Pirs_(ISS_module)},
+    date={2017-06-06},
+    organization={Wikipedia, The Free Encyclopedia},
+    urldate={2017-06-19},
 }
 
 %pozn.: clanky rozradit do kapitol (aby by to bylo prehlednejsi)
