--- a/text/parts/experimentDosis.tex
+++ b/text/parts/experimentDosis.tex
@@ -35,7 +35,7 @@ OHB System AG, Universitätsallee 27-29, 28359 Bremen, Germany\\
 Měření byla, respektive jsou prováděna pasivními a aktivními detektory, které jsou pevně umístěny v modulu Columbus. Pasivní detektory zajišťují určení prostorové distribuce dávky a dlouhodobého vývoje pole záření, aktivní naopak slouží k určení změn pole záření v čase. V případě aktivních detektorů se jedná o dva detektory DOSTEL (DOSimetry TELescope). V dalším textu se budeme zabývat pouze pasivními detektory.
 
 \section{Rozmístění pasivních detektorů}
-V rámci experimentu DOSIS, resp. DOSIS3D je v modulu Columbus rozmístěno jedenáct PDP (Passive Detector Packages, balíčky pasivních detektorů), které obsahují termoluminiscenční detektory (TLD), detektory využívající optickou stimulaci (OSLD) a detektory stop v pevné fázi (TED). Na obr. \ref{fig:columbus_rozmisteni} vidíme rozmístění PDPs; pět z nich je umístěno na čelní stěně, dalších šest na zadní stěně. Jedenáctý balíček označený symbolem X, též označovaný jako Triple PDP (trojitý PDP), je umístěn blízko aktivních detektorů a pokrývá větší plochu než ostatní PDPs. Osm PDPs je umístěno ve skříňových modulech (viz oddíl \ref{sec:ISS_columbus}); více informací o umístění pasivních detektorů je k dostání v \cite{dosis}. %další obrázek???
+V rámci experimentu DOSIS, resp. DOSIS3D je v modulu Columbus rozmístěno jedenáct PDP (Passive Detector Packages, balíčky pasivních detektorů), které obsahují termoluminiscenční detektory (TLD), detektory využívající optickou stimulaci (OSLD) a detektory stop v pevné fázi (TED). Na obr. \ref{fig:columbus_rozmisteni} vidíme rozmístění PDP; pět z nich je umístěno na čelní stěně, dalších šest na zadní stěně. Jedenáctý balíček označený symbolem X, též označovaný jako Triple PDP (trojitý PDP), je umístěn blízko aktivních detektorů a pokrývá větší plochu než ostatní PDP. Osm PDP je umístěno ve skříňových modulech (viz oddíl \ref{sec:ISS_columbus}); více informací o umístění pasivních detektorů je k dostání v \cite{dosis}. %další obrázek???
 \begin{figure}[ht]
   \centering
   \includegraphics[width=\textwidth]{columbus_rozmisteni.jpg}
@@ -44,7 +44,7 @@ V rámci experimentu DOSIS, resp. DOSIS3D je v modulu Columbus rozmístěno jede
 \end{figure}
 
 \section{Průběh experimentů}%mozna DOPLNIT:DOSTEL-1 meril kratsi dobu nez DOSTEL-2!!!!!!!!!!!!!
-Experiment DOSIS probíhal mezi lety 2009 a 2011. Doba trvání experimentu DOSIS3D byla původně stanovena na rozmezí let 2012-2016, avšak v roce 2016 byla prodloužena a experiment stále běží. V rámci těchto experimentů bylo v modulu Columbus zatím k dnešnímu datu (13. 5. 2017) postupně upevněno 10 sad pasivních detektorů (DOSIS -- dvě sady, DOSIS3D -- devět sad) a na květen/červen 2017 se plánuje upevnění jedenácté. Každá sada obsahovala obsahovala výše zmíněných 11 PDPs. Tab.~\ref{tab:dosis_timeline_passive} obsahuje informace o obměně sad pasivních detektorů (dopravení na ISS, instalaci, doba používání, ukončení měření,
+Experiment DOSIS probíhal mezi lety 2009 a 2011. Doba trvání experimentu DOSIS3D byla původně stanovena na rozmezí let 2012-2016, avšak v roce 2016 byla prodloužena a experiment stále běží. V rámci těchto experimentů bylo v modulu Columbus zatím k dnešnímu datu (13. 5. 2017) postupně upevněno 10 sad pasivních detektorů (DOSIS -- dvě sady, DOSIS3D -- devět sad) a na květen/červen 2017 se plánuje upevnění jedenácté. Každá sada obsahovala obsahovala výše zmíněných 11 PDP. Tab.~\ref{tab:dosis_timeline_passive} obsahuje informace o obměně sad pasivních detektorů (dopravení na ISS, instalaci, doba používání, ukončení měření,
 návrat na Zem, nadmořská výška ISS); u sad 7, 8, 9 experimentu DOSIS3D nejsou doposud k dispozici údaje o nadmořské výšce; sada 10 je stále na ISS. 
 
 První z experimentů započal 15. července 2009 startem raketoplánu Endeavor, na jehož palubě byla
@@ -194,12 +194,10 @@ Na obrázku \ref{fig:dosis_activeDetectors} je mimo jiné vidět DOSTEL. Informa
 
 %To. že nám (NPI) vyšla kalibrační krivka jinak než těm madarum, tak to psat do casti o detektorech
 \section{Výsledky}
-Zde jsou uvedeny výsledky publikované v \cite{dosis}. Jedná se o data naměřená TL a OSL detektory z obou sad DOSIS a z prvních šesti sad DOSIS3D, tedy o data naměřená mezi lety 2009 a 2015. Pro větší názornost jsou zde uvedeny i obrázky z \cite{dosis2}, které byly získány z dat naměřených aktivními detektory. 
+Zde jsou uvedeny výsledky publikované v \cite{dosis}. Jedná se o data naměřená TL a OSL detektory z obou sad DOSIS a z prvních šesti sad DOSIS3D, tedy o data naměřená mezi lety 2009 a 2015. %Pro větší názornost jsou zde uvedeny i obrázky z \cite{dosis2}, které byly získány z dat naměřených aktivními detektory. 
 
-Na naměřená data lze pohlížet z několika hledisek. Nejprve je uvedeno srovnání dat získaných z několika TL a ze všech OSL detektorů v rámci jedné sady experimentu DOSIS3D, konkrétně druhé. Poté následuje srovnání dat, které byly získány TL detektorem $^7$LiF:Mg,Ti v rámci všech osmi vyhodnocených sad. Dále je zmíněno stručné porovnání dat z pasivních a aktivních detektorů. 
-
-Srovnáním dat od TL detektorů z DOSIS3D s daty získanými v ISS mimo modul Columbus od detektorů stejného materiálu plyne, že velmi závisí na lokálním stínění. Data se v závislosti na jeho tloušťce mohou lišit až dvojnásobně.  
-
+Na naměřená data lze pohlížet z několika hledisek. Nejprve je uvedeno srovnání dat získaných z několika TL a ze všech OSL detektorů v rámci jedné sady experimentu DOSIS3D, konkrétně druhé. Poté následuje srovnání dat, které byly získány TL detektorem $^7$LiF:Mg,Ti v rámci všech osmi vyhodnocených sad. Dále je zmíněno stručné porovnání dat z pasivních a aktivních detektorů a nakonec jsou výsledky srovnány s daty získaných během jiných experimentů (popsaných ve článcích \cite{passDetectors, dataTLD_RR, ambrozova_dvaExperimenty}).
+%Srovnáním dat od TL detektorů z DOSIS3D s daty získanými v ISS mimo modul Columbus od detektorů stejného materiálu plyne, že velmi závisí na lokálním stínění. Data se v závislosti na jeho tloušťce mohou lišit až dvojnásobně.  
 %Vzhledem k tomu, že tato práce je primárně zaměřena na detektory stop v pevné fázi, tak jsou informace v tomto oddíle značně povrchní. %MOZNA ZMENIT?!!!!
 \subsection{Srovnání dat pasivních detektorů v rámci jedné sady}
 V obr. \ref{fig:dosis_vysl_jednaSada} jsou uvedeny dávkové příkony naměřené detektory z 2. sady DOSIS3D v závislosti na pozici detektoru, tzn. na PDP. Jedná se o TL detektory z materiálů: $^6$LiF:Mg,Ti; $^7$LiF:Mg,Ti; CaF$_2$:Tm; $^{\text{Nat}}$LiF:Mg,Ti; $^6$LiF:Mg,Cu,P; $^7$LiF:Mg,Cu,P; Al$_2$O$_3$:C a CaSO$_4$:Dy a o všechny OSL detektory. Je vidět, že data ze všech detektorů sledují v podstatě stejný trend a že dávkové příkony z detektorů stejného materiálu vycházejí přibližně stejně. Avšak na druhou stranu jsou zde patrné rozdíly mezi naměřenými dávkovými příkony detektorů různých materiálů. Jedním z důvodů je rozdílná účinnost detekce těžkých nabitých částic každého TL/OSL materiálu (viz oddíl \ref{sec:detektory_TLD}).
@@ -247,7 +245,9 @@ hlavně vzrůstající sluneční aktivitou. Je zajímavé, že při D3D6 detekt
   \label{fig:dosis_vysl_viceSad}
 \end{figure}
 
-Absorbovaná dávka z detektorů, které byly umístěny u čelní stěny vzhledem k pohybu ISS (jedná se o PDP 3, 4, 8, 9, 10), je menší než absorbovaná dávka z detektorů umístěných u zadní stěny (PDP 1, 2, 5, 6, 7, X)~\cite{dosis}. To je možné vysvětlit anizotropií zachycených protonů v SAA (viz oddíl \ref{sec:kosmickeZareni_anizotropie}).
+U všech osmi sad sleduje dávkový příkon stejný vývoj přes 11 PDP jako v druhé sadě DOSIS3D (obr. \ref{fig:dosis_vysl_jednaSada}). Tento vývoj je  dán změnami v tloušťce lokálního stínění pro jednotlivé PDP, které velmi ovlivňují příspěvky od nízkoenergetických protonů při průletech nad SAA (viz oddíl \ref{sec:kosmickeZareni_stineni}). 
+
+Absorbovaná dávka z detektorů, které byly umístěny u čelní stěny vzhledem k pohybu ISS (jedná se o PDP 3, 4, 8, 9, 10), je systematicky menší než absorbovaná dávka z detektorů umístěných u zadní stěny (PDP 1, 2, 5, 6, 7, X)~\cite{dosis}. To je možné vysvětlit anizotropií zachycených protonů v SAA (viz oddíl \ref{sec:kosmickeZareni_anizotropie}).
 \subsection{Srovnání dat pasivních a aktivních detektorů}%řešit tu vodu (absorbed dose in water)???!!!!!!!!
 V tab. \ref{tab:dosis_vysl_srovnaniPassiveActive} jsou srovnány absorbované dávky určené pomocí $^7$LiF:Mg,Ti a pomocí aktivního detektoru DOSTEL-1. Data od $^7$LiF:Mg,Ti pocházejí z PDP X (viz obr.~\ref{fig:columbus_rozmisteni}), který je upevněn na boxu, v němž se nachází aktivní detektory (viz obr.~\ref{fig:dosis_activeDetectors}). Absorbované dávky aktivního detektoru byly určeny zprůměrováním dat přes časový interval odpovídající dané sadě (viz tab. \ref{tab:dosis_timeline_passive}). Hodnoty v tab. \ref{tab:dosis_vysl_srovnaniPassiveActive} představují přepočtené absorbované dávky ve vodě. Je vidět, že data z obou typů detektorů jsou ve shodě. 
 
@@ -276,5 +276,23 @@ Při porovnávání dat z TLD a DOSTEL je třeba brát v úvahu několik věcí.
 \end{table}
 
 Výhodou aktivních detektorů je, že dokážou rozeznat příspěvky k dávce od GCR a od zachycených protonů v SAA.
+\subsection{Srovnání s jinými experimenty}
+Na různých místech v americké části ISS jsou od organizace NASA/SRAG umístěné tzv. monitory prostorového rozložení záření (RAM, Radiation Area Monitor), které obsahují termoluminiscenční detektory ($^7$LiF:Mg,Ti) a slouží ke stanovení prostorové distribuce dávky v ISS~\cite{RAM}. Můžeme tedy srovnávat jejich výsledky s výsledky DOSIS/DOSIS3D. RAM detektory měřily na ISS od dubna 2014 do listopadu 2014, celkem 218 dní; tato doba pokrývá pátou a částečně i šestou sadu DOSIS3D (tab.~\ref{tab:dosis_timeline_passive}). V modulu Columbus byly naměřeny dávkové příkony v rozsahu $[216\pm8;313\pm9]$ $\mu$Gy, v rámci programu RAM bylo rozpětí naměřených dávkových příkonů $[201\pm5;421\pm12]$ $\mu$Gy. Minimum je tedy přibližně stejné, avšak maximum je vyšší pro RAM. To bylo naměřeno v blízkosti okénka, a
+tudíž ho lze spojit s nižším stíněním. Celkově lze z těchto srovnání tvrdit, že dávkové příkony se v jednotlivých modulech mohou v závislosti na lokálním stínění lišit až dvojnásobně.~\cite{dosis}
 
+V letech 2007 a 2009 probíhalo měření spadající pod experiment MATROSHKA-R pomocí TLD (Al$_2$O$_3$:C, CaSO$_4$:Dy, Al-P) a TED (HARZLAS TD-1, Page) v Ruském provozním modulu Zvezda (informace o modulu jsou k dohlednání např. v~\cite{serviceModule}) a v modulu Pirs~(\cite{piers1}); více o průběhu měření viz tab. \ref{tab:dosis_passDetectors_timeline}.  Detektory byly v obou případech umístěny v šesti PDP (v originále SPD, sborka passivnych detektorov), přičemž dva PDP se nacházely v Pirs modulu a čtyři ve Zvezdě. Detektory stop HARZLAS TD-1 a Page dávají podobné výsledky \cite{passDetectors}, proto můžeme srovnávat tento experiment s DOSIS\&DOSIS3D. 
+\begin{table}[h]
+  \centering
+  \caption{Časový vývoj měření v ruských modulech Zvezda a Pirs. \cite{passDetectors}}
+  \label{tab:dosis_passDetectors_timeline}
+  \begin{tabular}{llll}
+	\toprule
+	Fáze&Počátek-konec&Doba trvání [dny]&Nadmořská výška ISS [km]\\
+	\midrule
+	1&Květen-Říjen 2007&163&338-353\\
+	2&Květen-Říjen 2009&158&350-361\\
+	\bottomrule
+  \end{tabular}
+\end{table}
+%Srovnáním dat od TL detektorů z DOSIS3D s daty získanými v ISS mimo modul Columbus od detektorů stejného materiálu plyne, že velmi závisí na lokálním stínění. Data se v závislosti na jeho tloušťce mohou lišit až dvojnásobně.  
 
