--- a/text/parts/praktickaCast.tex
+++ b/text/parts/praktickaCast.tex
@@ -165,10 +165,10 @@ Třetí složka nejistot $u_3$ se dá určit jen v některých situací, viz~\ci
 
 Chyba určení dávky $D_i$ od $N_i$ částic s lineárním přenosem energie $\LET_i$ se zjistí aplikací vztahu \eqref{eq:praktickaCast_neprimaChyba} pro $D_i(\LET_i,N_i)$, tedy 
 \begin{equation}
-  u(D_i)=\sqrt{\left(\frac{\partial D_i}{\partial\LET}u(\LET)\right)^2+\left(\frac{\partial D_i}{\partial N_i}u(N_i)\right)^2}\,,
+  u(D_i)=\sqrt{\left(\frac{\partial D_i}{\partial\LET_i}u(\LET_i)\right)^2+\left(\frac{\partial D_i}{\partial N_i}u(N_i)\right)^2}\,,
   \label{eq:praktickaCast_chybaDavka}
 \end{equation}
-kde vzhledem k Poissonovu rozdělení náhodné veličiny $N_i$ je $u(N_i)=\sqrt{N_i}$,~\cite{thesisKPBrabcova}; $u(\LET)$ se určí způsobem popsaným výše. Nepřesnost dávkového ekvivalentu se zjistí obdobně.
+kde vzhledem k Poissonovu rozdělení náhodné veličiny $N_i$ je $u(N_i)=\sqrt{N_i}$,~\cite{thesisKPBrabcova}; $u(\LET_i)$ se určí způsobem popsaným výše. Nepřesnost dávkového ekvivalentu se zjistí obdobně.
 
 Do $\LET$ spekter jsem nepřesnosti nezahrnul. Z výsledků článku~\cite{nejistoty} a z rad od vedoucí práce jsem relativní chybu dávky a dávkového ekvivalentu stanovil na 20 \% (absolutní odchylky viz tab.~\ref{tab:praktickaCast_davkyVysledky}).
 \begin{figure}[H]
@@ -201,3 +201,4 @@ Do $\LET$ spekter jsem nepřesnosti nezahrnul. Z výsledků článku~\cite{nejis
 \end{figure}
 \newpage
 \section{Diskuze}
+
