--- a/text/parts/detektory.tex
+++ b/text/parts/detektory.tex
@@ -3,7 +3,7 @@ Pasivní detektory nepotřebují napájení, jsou dobře skladné (malé rozměr
 
 K monitorování kosmického záření se používají detektory založené na opticky stimulované luminiscenci (OSLD), termoluminiscenční detektory (TLD) a detektory stop v pevné fázi (TED, nuclear track etched detectors/solid state nuclear track detectors). OSLD se využívají pouze okrajově a tato práce o nich nepojednává.
 
-Výstupem z TLD je dávka, která se absorbovala v detektoru za celý čas měření. Oproti tomu pomocí TED je možné změřit $\mathit{LET}$ spektrum v rozsahu, který je rozebrán dále v textu; $\mathit{LET}$ je lineární přenos energie. Kombinací dat z TLD a z TED lze určit celkový dávkový ekvivalent~\cite{benton}, avšak nezjistí se kvalita záření (většinou).
+Výstupem z TLD je dávka, která se absorbovala v detektoru za celý čas měření. Oproti tomu pomocí TED je navíc možné změřit $\mathit{LET}$ spektrum v rozsahu, který je rozebrán dále v textu; $\mathit{LET}$ je lineární přenos energie. Kombinací dat z TLD a z TED lze určit celkový dávkový ekvivalent~\cite{benton}, avšak nezjistí se kvalita záření (většinou).
 \section{Termoluminiscenční detektory}\label{sec:detektory_TLD}
 Termoluminiscence je jev vyskytující se u některých pevných látek. Jeho podstata spočívá v tom, že je-li látka ozářena, pak při zahřívání vyzařuje světlo, jehož množství je přímo úměrné energii, která byla při ozáření v látce deponována. Zjednodušeně lze jev vysvětlit následovně: ionizující záření při interakci s látkou mimo jiné vytrhává elektrony z valenčního pásu, čímž vznikají iontové páry (záporný elektron a kladná díra) a vytržené elektrony přecházejí do vodivostního pásu; část vytržených elektronů anihiluje s děrami (což uvolňuje tepelnou energii), avšak některé z nich se zachytí na tzv. elektronových pastech (nehomogenity v látce atp.); aby se elektron z pasti dostal, tak mu musí být dodána energie k překonání vazby, což se děje při zahřívání látky; uvolněný elektron následně
 anihiluje s dírou, přičemž energie je vyzářena ve formě elektromagnetického záření (přibližně ve viditelném spektru) nebo je předána tzv. luminiscenčnímu centru, které energii taktéž přemění na světlo. Luminiscenční centra jsou tvořena stopovými příměsemi prvků (např. Mn, Dy, Tm, Cu, C, \ldots). Světelný signál je zesílen fotonásobičem a poté vyhodnocen.
@@ -17,7 +17,7 @@ TLD měří spolehlivě částice s $\mathit{LET}$ nižším než cca 10 keV/$\m
 \end{equation}
 kde $(TL_{\text{odezva}})_Y$, resp. $(TL_{\text{odezva}})_{\gamma}$ je odezva TLD po ozáření dávkou $(D_{\text{tkáň}})_Y$, resp. $(D_{\text{tkáň}})_{\gamma}$, přičemž tyto dávky jsou si číselně rovny. Jinak řečeno $\mathit{RR}$ je definována jako poměr odezev po ozáření stejnou dávkou v tkáni (z níž je TLD vyroben) způsobenou částicemi $Y$ a referenčním zářením $\gamma$~\cite{TLD_RR}. 
 
-Na vývoj $\RR$ se podíváme u dvou TLD používaných Oddělením dozimetrie záření ÚJF AV ČR (v dalším textu je používána anglická zkratka NPI, Nuclear Physics Institute). Jedná se o detektory Al$_2$O$_3$:C a CaSO$_4$:Dy. Tyto detektory byly, resp. jsou používány v experimentech DOSIS a DOSIS3D. V obr. \ref{fig:detektory_TLD_RR} jsou hodnoty $\RR$ těchto detektorů pro částice s různým $\LET$ získané při experimentálním ozařování~\cite{dataTLD_RR}. Lze pozorovat, že s rostoucím $\LET$ relativní odezva u obou detektorů klesá, u Al$_2$O$_3$:C mnohem rychleji než u CaSO$_4$:Dy. Pro zpřesnění měření v polích částic s různým $\LET$ je potřeba provést korekci TL odezev, jinak dochází k podhodnocení dávky; více informací v~\cite{TLD_RR}.
+Na vývoj $\RR$ se podíváme u dvou TLD používaných Oddělením dozimetrie záření ÚJF AV ČR (v dalším textu je používána anglická zkratka NPI, Nuclear Physics Institute). Jedná se o detektory Al$_2$O$_3$:C a CaSO$_4$:Dy. Tyto detektory byly, resp. jsou používány v experimentech DOSIS a DOSIS3D. V obr. \ref{fig:detektory_TLD_RR} jsou hodnoty relativní odezvy (relativní vůči $^{60}$Co) těchto detektorů pro částice s různým $\LET$ získané při experimentálním ozařování~\cite{dataTLD_RR}. Lze pozorovat, že s rostoucím $\LET$ relativní odezva u obou detektorů klesá, u Al$_2$O$_3$:C mnohem rychleji než u CaSO$_4$:Dy. Pro zpřesnění měření v polích částic s různým $\LET$ je potřeba provést korekci TL odezev, jinak dochází k podhodnocení dávky; více informací v~\cite{TLD_RR}.
 \begin{figure}[H]
   \centering
   \input{images/TLD_RR}
@@ -30,7 +30,7 @@ se používají hlavně plasty, skla a minerální krystaly.
 
 TED jsou schopné měřit pouze částice s $\LET$ vyšším než je určitá prahová hodnota, která je různá pro odlišné materiály, ale pohybuje se kolem 10 kev/$\mu$m~\cite{ambrozova_dvaExperimenty}. Rozsah měřitelných $\LET$ je omezený i shora, tato hodnota také zavisí na materiálu.  
 
-Latentní stopy jsou nejčastěji zvětšovány chemickým leptáním. Tato metoda vychází z faktu, že poškozené části materiálu se leptají rychleji než nepoškozené. Někdy se používá dvoustupňové (per partes) leptání, které má tu výhodu, že po první fázi jsou zřetelné stopy vytvořené částicemi s krátkým dosahem a s velkým $\LET$, které by při jednostupňovém dlouhém leptání byly odstraněny, a po druhé fázi naopak lze identifikovat stopy vytvořené částicemi s malým $\LET$, čímž se významně zvýší rozsah detekovatelných částic \cite{cesky}. 
+Latentní stopy jsou nejčastěji zvětšovány chemickým leptáním. Tato metoda vychází z faktu, že poškozené části materiálu se leptají rychleji než nepoškozené. Někdy se používá dvoustupňové (per partes) leptání, které má tu výhodu, že po první fázi jsou zřetelné stopy vytvořené částicemi s krátkým dosahem a s velkým $\LET$ ($> 300$ keV/$\mu$m), které by při jednostupňovém dlouhém leptání byly odstraněny, a po druhé fázi naopak lze identifikovat stopy vytvořené částicemi s malým $\LET$ (až do detekčního prahu), čímž se významně zvýší rozsah detekovatelných částic \cite{cesky}. 
 
 Tvorba latentních stop není doposud plně pochopena. U anorganických materiálů se jej snaží vysvětlit např. mechanismus popsaný v \cite{spikeModel}. U organických materiálů je proces tvorby stop rozdělen do tří fází: fáze fyzikální, fáze fyzikální-chemická a fáze chemická. Při první fázi ztrácí částice v materiálu energii (excitacemi a ionizacemi elektronů z obalu terčíků, vyražením terčíku z polymerové vazby, brzdným záření v případě velké rychlosti částice). Při druhé fázi dochází k interakcím částic vzniklých v první fázi, které vyúsťují ke vzniku latentních stop; latentní stopa se skládá z jádra o průměru cca 10 nm a vnější oblasti o průměru odpovídající dosahu delta elektronů, viz obr. \ref{fig:detektory_latentTrack}. Poslední fáze představuje leptání, při němž jsou stopy zafixovány
 a zvětšeny.~\cite{thesisKPBrabcova} 
@@ -108,6 +108,8 @@ $>$100&300/$\sqrt{\LET}$\\
 	\bottomrule
   \end{tabular}
 \end{table}
+\section{Kombinace dat z TLD a TED}
+Citlivosti TLD a TED se celkem dobře doplňují, a tak lze tyto dva druhy pasivních detektorů využít ke změření celkové absorbované dávky a celkového dávkového ekvivalentu. Ze známosti relativní odezvy TL detektoru a z $\LET$ spektra získaným z dat změřených detektorem stop lze odečíst příspěvek částic s vysokým $\LET$ (tedy takových, pro které je $\RR<1$) od dávky změřené TLD. Zbylá dávka z TLD pocházející od částic s malým $\LET$ se pak pričte k dávce určené TED, která pochází od částic s vyšším $\LET$. Tímto způsobem je získána celková absorbovaná dávka. Celkový dávkový ekvivalent se stanoví součtem upravené dávky TLD (pro nízké $\LET$ platí $Q=1$, viz tab. \ref{tab:detektory_Q}) a dávkovým ekvivalentem TED.~\cite{dataTLD_RR}
 
 
 %vyhodnocování OSLD probíhá pomocí referenčního zdroje (ten vztah asi nepsat) (dosis, s. 7); OSLD detektory se tato práce nezabývá, takže spíš ne
