--- a/text/parts/kosmickeZareni.tex
+++ b/text/parts/kosmickeZareni.tex
@@ -86,10 +86,10 @@ Znatelný je také vliv hustoty atmosféry, která s rostoucí nadmořskou výš
 \subsection{Východní/západní anizotropie zachycených protonů}\label{sec:kosmickeZareni_anizotropie}
 Tok protonů vstupujících do vesmírného objektu nad SAA je anizotropní: protony pohybující se na východ následují geomagnetické siločáry ležící nad oběžnou dráhou objektu, zatímco protony pohybující se na západ následují geomagnetické siločáry ležící pod oběžnou dráhou objektu. Poloměr cyklotronového pohybu protonů v SAA %je stejného řádu jako výška atmosféry
 je přímo úměrný atmosférickému měřítku výšky (atmospheric density scale height); tato veličina je definovaná jako vzrůst v nadmořské výšce, pro který se atmosférický tlak sníží o faktor~e~\cite{scaleHeight_wiki}. Ona úměrnost je způsobena tím, že protony cestující na západ se pohybují v hustší vrstvě atmosféry a tudíž s větší pravděpodobností interagují s atmosférou, čímž je toto záření utlumeno. Tento jev se projevuje až trojnásobným rozdílem dávkového příkonu mezi západní (do které narážejí protony cestující na východ) a východní (protony cestující na západ) částí objektu \cite{benton}. 
-\subsection{Stínění}
+\subsection{Stínění}\label{sec:kosmickeZareni_stineni}
 Stínění vesmírného objektu představuje jeden z nejdůležitějších faktorů ovlivňující charakter záření uvnitř vesmírného objektu. Zvyšením stínění se dosáhne snížení dávkového příkonu uvnitř objektu, avšak na druhou stranu se může zvýšit jakostní činitel záření $Q$, tedy potenciální nebezpečnost záření z hlediska zdraví astronautů. Vzrůst $Q$ je dán zpomalením primárních částic ve stínění, které vede ke zvýšení jejich LET (Linear energy tranfer, lineární přenos energie) \cite{toNemecky}.
 
-Tento jev lze pozorovat např. v měřeních prováděných univerzitou v San Franciscu v letech 1996-1997 na palubě ruské kosmické stanice Mir. Obr. \ref{fig:stineni} zobrazuje dvě LET spektra. Obě dvě byla naměřena detektory stop CR-39, přičemž jeden detektor byl silně stíněn (více než 40 g/cm$^2$) a druhý slabě (méně než 20 g/cm$^2$). Pro LET menší než cca 100 keV/$\mu$m jsou obě spektra velmi podobná, nicméně pro větší hodnoty LET leží spektrum prvního detektoru znatelně výš než spektrum druhého detektoru \cite{benton}. To plně odpovídá informacím z prvního odstavce.
+Tento jev lze pozorovat např. v měřeních prováděných univerzitou v San Franciscu v letech 1996-1997 na palubě ruské kosmické stanice Mir. Obr. \ref{fig:stineni} zobrazuje dvě integrální LET spektra. Obě dvě byla naměřena detektory stop CR-39, přičemž jeden detektor byl silně stíněn (více než 40 g/cm$^2$) a druhý slabě (méně než 20 g/cm$^2$). Pro LET menší než cca 100 keV/$\mu$m jsou obě spektra velmi podobná, nicméně pro větší hodnoty LET leží spektrum prvního detektoru znatelně výš než spektrum druhého detektoru \cite{benton}. To plně odpovídá informacím z prvního odstavce.
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.6\textwidth]{stineni.png}
